Fixes to chevron alignments

--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -92,6 +92,7 @@ $icon-arrow-left: '../svg/chevron-left-dark.svg';
             position: absolute;
             right: 0;
             padding-right: .2rem;
+            top: 2px;
             vertical-align: text-bottom;
             background-color: transparent;
             z-index: 99;
@@ -126,6 +127,7 @@ $icon-arrow-left: '../svg/chevron-left-dark.svg';
                   bottom: 2px;
                   right: auto;
                   left: 8px;
+                  top: auto;
                   padding: 0;
                   z-index: 99;
                 }
@@ -169,6 +171,7 @@ $icon-arrow-left: '../svg/chevron-left-dark.svg';
               background-repeat: no-repeat;
               background-position: center;
               bottom: 2px;
+              top: auto;
               right: 15px;
               padding: 0;
               z-index: 99;
